--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
 		"#parser/*": "./src/parser/*"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^1.5.3"
+		"@biomejs/biome": "^1.5.3",
+		"vitest": "^1.2.2"
 	},
 	"scripts": {
 		"format": "biome format . --write",
 		"lint": "biome lint .",
 		"fix": "biome check --apply .",
-		"fix-unsafe": "biome check --apply-unsafe ."
+		"fix-unsafe": "biome check --apply-unsafe .",
+		"test": "vitest"
 	}
 }
