--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
-	"name": "twilight",
-	"module": "index.js",
-	"type": "module",
-	"devDependencies": {
-		"@biomejs/biome": "^1.5.3",
-		"vitest": "^1.2.2"
-	},
-	"scripts": {
-		"format": "biome format . --write",
-		"lint": "biome lint .",
-		"fix": "biome check --apply .",
-		"fix-unsafe": "biome check --apply-unsafe .",
-		"test": "vitest"
-	}
+  "name": "twilight",
+  "module": "index.js",
+  "type": "module",
+  "devDependencies": {
+    "@biomejs/biome": "^1.5.3",
+    "vitest": "^1.2.2"
+  },
+  "scripts": {
+    "format": "biome format . --write",
+    "lint": "biome lint .",
+    "fix": "biome check --apply .",
+    "fix-unsafe": "biome check --apply-unsafe .",
+    "test": "vitest"
+  },
+  "dependencies": {
+    "chalk": "^5.3.0"
+  }
 }
