--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test": "vitest"
   },
   "dependencies": {
-    "chalk": "^5.3.0"
+    "chalk": "^5.3.0",
+    "fast-levenshtein": "^3.0.0"
   }
 }
