--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
 	"name": "twilight-lang",
-	"module": "index.js",
+	"main": "./dist/index.js",
+	"module": "./dist/index.mjs",
+	"types": "./dist/index.d.ts",
+	"files": [
+		"dist"
+	],
 	"type": "module",
 	"version": "2.0.0",
 	"author": "EvanZhouDev",
@@ -8,6 +13,8 @@
 	"description": "Twilight is a modern lambda calculus runtime and REPL.",
 	"devDependencies": {
 		"@biomejs/biome": "^1.9.4",
+		"tsup": "^8.3.5",
+		"typescript": "^5.7.2",
 		"vitest": "^1.6.0"
 	},
 	"repository": {
@@ -24,7 +31,8 @@
 		"lint": "biome lint .",
 		"fix": "biome check --apply .",
 		"fix-unsafe": "biome check --apply-unsafe .",
-		"build": "bun build ./cli/index.ts --compile --outfile ./bin/twilight"
+		"build-binary": "bun build ./cli/index.ts --compile --outfile ./bin/twilight",
+		"build": "tsup"
 	},
 	"dependencies": {
 		"@types/node": "^22.10.2",
