--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 	"compilerOptions": {
 		"baseUrl": "./",
 		"target": "es2022",
-		"moduleResolution": "node"
+		"moduleResolution": "node",
+		"declaration": true,
 	}
 }
